BC main/ 정산, 배분, 회계

--- a/pages/layout/header_bc.html
+++ b/pages/layout/header_bc.html
@@ -1,8 +1,62 @@
 <header id="header">
     <div class="header-wrap">
-        <a href="#" class="left-group">
-            <span class="logo">효성에프엠에스</span><span class="logo-info">통합업무시스템</span>
-        </a>
-       
+        <div class="left-group">
+            <h1 class="logo-set has-bar">
+                <a class="logo">효성에프엠에스</a><span class="logo-info">상담센터</span>
+            </h1>
+            <div class="user-set">
+                <div class="profile-box">
+                    <i class="h-ico md profile-blue">프로필</i>
+                    <strong class="name">홍길동</strong>&nbsp;님
+                </div>
+                <div class="timer-box">
+                    <span class="timer-set"><i class="h-ico xs time">타이머</i><span id="timer">09:30</span></span>
+                    <button type="button" class="h-btn time-add">로그인연장</button>
+                </div>
+                <button type="button" class="h-btn logout">로그아웃</button>
+            </div>
+        </div>
+        <div class="right-group">
+            <ul class="status-list">
+                <li class="list">
+                    <span class="label has-bar dot">발신번호</span>
+                    <span class="desc">010-1234-5678</span>
+                </li>
+                <li class="list">
+                    <span class="label has-bar dot">대기시간</span>
+                    <span class="desc"><span>30</span><span class="unit">분</span></span>
+                </li>
+                <li class="list">
+                    <span class="label has-bar dot">상담중</span>
+                    <span class="desc"><span>17</span><span class="unit">건</span></span>
+                </li>
+                <li class="list">
+                    <span class="label has-bar dot">약속건</span>
+                    <span class="desc"><span>2</span><span class="unit">건</span></span>
+                </li>
+            </ul>
+            <div class="btn-list">
+                <button data-role="button" class="list">
+                    <i class="h-ico remote">원격제어</i>
+                    <span>원격제어</span>
+                </button>
+                <button data-role="button" class="list">
+                    <i class="h-ico adduser">사용자등록</i>
+                    <span>사용자등록</span>
+                </button>
+                <button data-role="button" class="list">
+                    <i class="h-ico mail">문자발송</i>
+                    <span>문자발송</span>
+                </button>
+                <button data-role="button" class="list">
+                    <i class="h-ico call">전화걸기</i>
+                    <span>전화걸기</span>
+                </button>
+                <button data-role="button" class="list">
+                    <i class="h-ico consult">상담등록</i>
+                    <span>상담등록</span>
+                </button>
+            </div>
+        </div>
     </div>
 </header>
