--- a/resources/css/scss/_variables_bc.scss
+++ b/resources/css/scss/_variables_bc.scss
@@ -47,6 +47,11 @@ $base-font-size: 16px;
     line-height: 24px;
     letter-spacing: -0.75px;
 }
+@mixin bc-font-size-sm2 {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.75px;
+}
 @mixin bc-font-size-md {
     font-size: 17px;
     line-height: 24px;
