--- a/resources/css/scss/modules/_table.scss
+++ b/resources/css/scss/modules/_table.scss
@@ -33,15 +33,27 @@
     }
     &.sm {
         flex-direction: row;
-		margin-top: 12px;
+        margin: 12px -10px 0 -10px;
 		align-items: stretch;
 		> :first-child {
             width: 298px;
 			flex: 0 0 298px;
-            + * {
-                margin-left: 10px;
-            }
 		}
+        > * {
+            margin: 0 10px;
+        }
+	}
+    &.md {
+        flex-direction: row;
+		margin: 0 -10px;
+		align-items: stretch;
+		> :first-child {
+            width: 380px;
+			flex: 0 0 380px;
+		}
+        > * {
+            margin: 0 10px;
+        }
 	}
     .search-control {
         .form-group:only-child {
@@ -237,6 +249,7 @@ td.point, th.point {
     }
     th, td {
         border: 1px solid $gray-e4;
+        color: $gray-2;
         @include font-size-sm;
     }
     td {
@@ -256,11 +269,20 @@ td.point, th.point {
             border-right: none;
         }
     }
+    tfoot {
+        background-color: $wait;
+        td {
+            font-weight: 500;
+        }
+    }
+}
+.inner-column {
+    padding: 0 !important;
 }
 .inner-column .table {
     border-top: 0;
-    tr:last-child th, 
-    tr:last-child td {
+    tbody tr:last-child th, 
+    tbody tr:last-child td {
         border-bottom: 0;
     } 
 }
